hphp/hack/test/typecheck/expression_trees/splice_err2.php.exp
File "splice_err2.php", line 9, characters 17-21:
Invalid argument (Typing[4110])
  File "expr_tree.hhi", line 205, characters 35-44:
  Expected `ExampleInt`
  File "splice_err2.php", line 6, characters 8-20:
  But got `TInfer#1 as ExampleString`
  File "expr_tree.hhi", line 14, characters 33-38:
    via this generic `TInfer`
  File "expr_tree.hhi", line 181, characters 44-49:
    via this generic `TInfer`
